@@ -19,6 +19,15 @@
 # file whose name matches the sound icon name.  If blank, or no
 # matching file is found, the name of the sound icon will be spoken.
 
+# -- Abbreviation dictionaries --
+
+# Enable the abbreviation dictionaries.
+#
+
+IbmttsUseAbbreviation 1
+
+# IbmttsUseSSML 0
+
 #IbmttsSoundIconFolder "/usr/share/sounds/sound-icons/"
 
 # -- DEBUG --
